sass/main.scss
/* ... */
.team-members {
  margin-bottom: 20px;
  .manan,
  .aadil,
  .viraj {
    width: 175px;
    height: 175px;
    margin: 35px 0 0 75px;
    border-radius: 50%;
    background-size: cover;
    background-position: 100% 100%;
  }
  .manan {
    background-image: url(../img/manan.png);
  }
  .aadil {
    background-image: url(../img/aadil.png);
  }
  .viraj {
    background-image: url(../img/viraj.png);
  }
  .member-detail {
    margin-top: 50px;
    p {
      margin-top: 10px;
    }
    img {
      width: 100%;
    }
  }
}

// /////////////////////////
// CONTACT US
// /////////////////////////
.contactus {
  position: relative;
  h2 {
    margin-top: 35px;
  }
  a {
    &:hover {
      color: $brand-title;
    }
  }
  p { margin: 10px 0 0 0; }
  .copyright {
    margin-right: 20px;
  }
  .follow {
    p {
      margin: 0 10px 0 0;
      display: inline-block;
      vertical-align: middle;
    }
    .list-inline > li {
      padding: 0;
      padding: 0;
    }
  }
}
.social-icon {
  display: inline-block;
  a {
    width: 30px;
    height: 30px;
    border-radius: 100%;
    line-height: 40px;
    margin-right: 2px;
    background-color: #fff;
    i {
      color: $brand-primary;
      font-size: 20px;
    }
    &:hover {
      opacity: 0.7;
    }
  }
}
.cont {
  margin-bottom: -150px;
}
.contact-address {
  margin-top: 50px;
}
.address {
  margin: 0;
  a {
    margin: 10px 0;
  }
}
.contact-add {
  margin-top: 75px;
}
.add,
.add-head {
  font-size: 16px;
  font-weight: 700;
}
.add-head {
  margin-bottom: 0;
}
.enquire {
  margin: 100px 0 20px;
  h2 {
    margin-bottom: 50px;
  }
}
.form-group {
  input,
  textarea {
    background: transparent;
    border: 1px solid white;
  }
  textarea {
    height: 200px;
  }
}
.send-button {
  margin-top: 30px;
  text-align: center;
  .submit {
    padding: 8px 34px;
    border: 1px solid white;
    background: $body-bg;
    color: $brand-primary;
    @include transition(all 300ms linear);
    &:hover {
      border: 1px solid white;
      @include transition(all 300ms linear);
    }
  }
}
.form-group input, .form-group textarea {
    color: #fff;
}
// /////////////////////////
// DAHI
// /////////////////////////
.dahi-pack,
.milk-pack,
.paneer-pack {
  text-align: center;
  .dahi-image,
  .milk-image {
    margin: 150px 0 50px;
  }
  img.dahi-image { width: 35%; }
  .paneer-image { width: 45%; margin-top: 150px; }
  .dahi-details,
  .milk-details,
  .paneer-details {
    text-align: justify;
    padding: 0 30px;
    border-left: 1px solid black;
    border-right: 1px solid black;
    .dahi-detail,
    .milk-detail,
    .paneer-detail {
      font-size: 12px;
    }
    .prices {
      text-align: center;
    }
  }
}
.dahi-title {
  margin-right: -70px;
  .dahi-text {
    margin-top: 40px;
  }
  .dahi-text ~ p.made-from {
    font-size: 18px;
    margin-top: -10px;
  }
  .past-milk,
  .stand-milk {
    margin-top: -10px;
    font-size: 26px;
  }
}
.paneer-title {
  margin: 30px -120px 0 0;
  .paneer-text,
  .paneer-text2 {
    margin: 0;
  }
  .paneer-text2 {
    margin-top: -15px;
  }
}
.dahi-text,
.milk-text,
.paneer-text,
.paneer-text2 {
  margin-top: 25px;
  font-family: $font-calibri;
  font-size: 70px;
}

// /////////////////////////
// MILK
// /////////////////////////
.milk-pack {
  h2 {
    margin-bottom: -10px;
  }
  h2 ~ p {
    font-size: 26px;
  }
}
.milk-variants {
  margin-top: 50px;
  span {
    font-size: 28px;
    font-weight: 100;
  }
  .variant-images {
    margin-top: 50px;
  }
}

// /////////////////////////
// PLANT
// /////////////////////////
.plant {
  padding-top: 150px;
  h2 {
    margin-bottom: 50px;
  }
  .plant-detail {
    p {
      text-align: justify;
    }
  }
}
.slider {
  position: relative;
  .slide-imgholder {
    height: 354px;
    margin-bottom: 20px;
    .plant-image {
      -o-border-radius: 50% 50% 50% 50% / 60% 60% 40% 40%;
      -ms-border-radius: 50% 50% 50% 50% / 60% 60% 40% 40%;
      -moz-border-radius: 50% 50% 50% 50% / 60% 60% 40% 40%;
      -webkit-border-radius: 50% 50% 50% 50% / 60% 60% 40% 40%;
      border-radius: 50% 50% 50% 50% / 60% 60% 40% 40%;
    }
  }
  .main-slidepart {
    width: 70%;
    margin: 0 auto;
    .img-slide-hold {
      width: 100px !important;
      height: 100px;
      border-radius: 100%;
      background-repeat: no-repeat;
      background-size: cover;
    }
    .flex-control-nav {
      display: none;
    }
  }
  .flexslider {
    background-color: transparent;
    border: none;
    .flex-direction-nav {
      a {
        width: 20px;
        height: 50px;
        color: transparent;
        text-shadow: none;
      }
      .flex-prev {
        opacity: 1;
        left: -25px;
        background: url(../img/arrow-left.png) no-repeat;
        &:before {
          display: none;
        }
      }
      .flex-next {
        opacity: 1;
        right: 0;
        background: url(../img/arrow-right.png) no-repeat;
        &:before {
          display: none;
        }
      }
    }
    .flexslider:hover .flex-direction-nav .flex-prev,
    flex-next {
      opacity: 1;
    }
  }
}
/* ... */

